[project]
name = "silentlovefilter"
version = "0.1.0"
description = ""
authors = [
    {name = "Rozhak",email = "65714340+RozhakDev@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.20.0,<0.21.0)",
    "rich (>=14.2.0,<15.0.0)",
    "pydub (>=0.25.1,<1.0.0)",
    "pygame (>=2.5.0,<3.0.0)"
]

[project.scripts]
silentlovefilter = "silentlovefilter.cli.main:app"

[tool.poetry]
packages = [{include = "silentlovefilter", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
